# chat-langchain-lite

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: auto-label-engine-prs.yml  evals.yml
.streamlit/: config.toml
agent/: AGENTS.md  agent.py  prompts.py  tools.py
context/: AGENTS.md  __init__.py
evals/: dataset.py  evaluators.py
scripts/: cleanup.py  generate_traces.py  run_evals.py  setup.py
utils/: context_hub.py  streaming.py
