[project]
name = "chat-lc-lite-agent"
version = "0.1.0"
description = "Chat LangChain Lite — a LangChain ecosystem chatbot with intentional bugs, built to demo LangSmith Engine"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.35.0",
    "markdown>=3.6",
    "deepagents>=0.6.3",
    "langchain>=1.3.1",
]
